fix top nav z-index

--- a/src/Client/Shared/MainLayout.razor.css
+++ b/src/Client/Shared/MainLayout.razor.css
@@ -60,7 +60,8 @@
     .top-row {
         position: sticky;
         top: 0;
-        z-index: 1;
+        z-index: 2; /* stay at top*/
+        /*z-index: 1;*/
     }
 
     .main > div {
